--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vue/cli": "^4.5.12",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue2-google-maps": "^0.10.7",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
